[package]
name = "range-collections"
version = "0.1.0"
authors = ["Rüdiger Klaehn <rklaehn@protonmail.com>"]
description = "Sets and maps of ranges, backed by smallvec"
repository = "https://github.com/rklaehn/range-collections"
license = "MIT OR Apache-2.0"
keywords = ["succinct", "array", "range", "smallvec"]
categories = ["data-structures"]
edition = "2018"
readme = "README.md"
homepage = "https://github.com/rklaehn"

[dependencies]
smallvec = "1.0"

[dev-dependencies]
quickcheck = "0.8"
quickcheck_macros = "0.8.0"
testdrop = "0.1.2"
num-traits = "0.2.8"
criterion = "0.3.0"
rand = "0.7.2"

[[bench]]
name = "range_set"
harness = false
